@@ -17,6 +17,13 @@ ACE_Condition_Attributes::~ACE_Condition_Attributes (void)
 }
 
 ACE_INLINE
+const ACE_condattr_t&
+ACE_Condition_Attributes::attributes (void) const
+{
+  return this->attributes_;
+}
+
+ACE_INLINE
 ACE_Condition_Attributes_T<ACE_Monotonic_Time_Policy>::ACE_Condition_Attributes_T (int type)
  : ACE_Condition_Attributes (type)
 {
